force-app/main/default/objects/sked__Polling_Change_Event__c/sked__Polling_Change_Event__c.object-meta.xml
<CustomObject>
    <label>Polling Change Event</label>
    <nameField>
        <displayFormat>{00000}</displayFormat>
        <label>Polling Change Event Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Polling Change Events</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>