force-app/main/default/objects/sked__Polling_Change_Event__c/fields/sked__Operation__c.field-meta.xml
<CustomField>
    <fullName>sked__Operation__c</fullName>
    <label>Operation</label>
    <length>20</length>
    <type>Text</type>
</CustomField>