force-app/main/default/objects/sked__Polling_Change_Event__c/fields/sked__Table__c.field-meta.xml
<CustomField>
    <fullName>sked__Table__c</fullName>
    <label>Table</label>
    <length>80</length>
    <type>Text</type>
</CustomField>